# RenderVerseX

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Plant.md  README.md  RHI_OpenGL_Implementation_Plan.md  package-lock.json  vcpkg-configuration.json  vcpkg.json
AI/: CMakeLists.txt
AI/Include/AI/: AI.h  AISubsystem.h  AITypes.h
AI/Private/: AISubsystem.cpp
AI/Private/BehaviorTree/: BTNode.cpp  BehaviorTree.cpp  Blackboard.cpp
AI/Private/Navigation/: NavMesh.cpp  NavMeshBuilder.cpp  NavigationAgent.cpp  PathFinder.cpp
AI/Private/Perception/: AIPerception.cpp  HearingSense.cpp  SightSense.cpp
Acceleration/: CMakeLists.txt
Acceleration/Include/Acceleration/: Acceleration.h  BVH.h  Intersection.h  Ray.h
Animation/: CMakeLists.txt
Animation/Include/Animation/: Animation.h
Animation/Private/Blend/: Blend1D.cpp  Blend2D.cpp  BlendNode.cpp  BlendTree.cpp
Animation/Private/Core/: AnimationCompression.cpp
Animation/Private/IK/: FABRIK.cpp  (+1 more)
Asset/: CMakeLists.txt
Asset/Private/: Asset.cpp  AssetCache.cpp  AssetRegistry.cpp  DependencyGraph.cpp  ResourceManager.cpp
Audio/: CMakeLists.txt
Audio/Private/: AudioClip.cpp  AudioEngine.cpp  AudioListener.cpp  AudioSource.cpp  AudioSubsystem.cpp
Camera/: CMakeLists.txt
Camera/Private/: Camera.cpp  CameraRegistry.cpp  CameraSystem.cpp  FPSController.cpp  OrbitController.cpp
Core/: CMakeLists.txt
Core/Private/: Log.cpp  Memory.cpp  SystemManager.cpp
Debug/: CMakeLists.txt
Debug/Private/: CPUProfiler.cpp  CVarSystem.cpp  Console.cpp  DebugSubsystem.cpp  MemoryTracker.cpp  StatsHUD.cpp
Editor/: CMakeLists.txt
Editor/Private/: EditorApplication.cpp  EditorContext.cpp  EditorTheme.cpp  EditorWindow.cpp  Main.cpp
Engine/: CMakeLists.txt
Engine/Private/: Engine.cpp
Geometry/: CMakeLists.txt
Geometry/Private/: Geometry.cpp
HAL/: CMakeLists.txt
HAL/Private/: Input.cpp
Input/: CMakeLists.txt
Input/Private/: Input.cpp
Networking/: CMakeLists.txt
Networking/Private/: Connection.cpp  NetworkManager.cpp  NetworkSubsystem.cpp
Particle/: CMakeLists.txt
Particle/Private/: ParticleComponent.cpp  ParticlePool.cpp  ParticleSubsystem.cpp  ParticleSystem.cpp  ParticleSystemInstance.cpp  ParticleSystemLoader.cpp
Particle/Shaders/: ParticleBillboard.hlsl  ParticleBitonicSort.hlsl  ParticleEmit.hlsl  ParticleSimulate.hlsl  ParticleStretchedBillboard.hlsl
Physics/: CMakeLists.txt
Physics/Private/: CharacterController.cpp  Collider.cpp  PhysicsWorld.cpp  RigidBody.cpp
Picking/: CMakeLists.txt
Picking/Private/: PickingBVH.h  PickingSystem.cpp
Platform/: CMakeLists.txt
Platform/Private/: InputBackend_GLFW.cpp  Window.cpp
RHI/: CMakeLists.txt
RHI/Private/: DescriptorCache.cpp  RHIModule.cpp  RHIValidation.cpp
RHI_DX11/: CMakeLists.txt
RHI_DX11/Private/: DX11BindingRemapper.cpp  DX11BindingRemapper.h  DX11CommandContext.cpp  DX11CommandContext.h  DX11Common.h  DX11Conversions.h  DX11Debug.cpp  DX11Debug.h  DX11Device.cpp  DX11Device.h  DX11Pipeline.cpp  DX11Pipeline.h  DX11Resources.cpp  DX11Resources.h  DX11StateCache.cpp  DX11StateCache.h  DX11SwapChain.cpp  DX11SwapChain.h  DX11Upload.cpp  DX11Upload.h
RHI_DX12/: CMakeLists.txt
RHI_DX12/Private/: DX12CommandAllocatorPool.cpp  DX12CommandAllocatorPool.h  DX12CommandContext.cpp  DX12CommandContext.h  DX12Common.h  DX12DescriptorHeap.cpp  DX12DescriptorHeap.h  DX12Device.cpp  DX12Device.h  DX12Pipeline.cpp  DX12Pipeline.h  DX12PipelineCache.cpp  DX12PipelineCache.h  DX12Query.cpp  DX12Query.h  DX12Resources.cpp  DX12Resources.h  DX12SwapChain.cpp  DX12SwapChain.h  DX12Upload.cpp  DX12Upload.h
RHI_Metal/: CMakeLists.txt
RHI_Metal/Private/: MetalCommandContext.h  MetalCommandContext.mm  MetalCommon.h  MetalConversions.h  MetalDevice.h  MetalDevice.mm  MetalPipeline.h  MetalPipeline.mm  MetalQuery.h  MetalQuery.mm  MetalResources.h  MetalResources.mm  MetalSwapChain.h  MetalSwapChain.mm  MetalSynchronization.h  MetalSynchronization.mm  MetalUpload.h  MetalUpload.mm
RHI_OpenGL/: CMakeLists.txt
RHI_OpenGL/Private/: OpenGLCaches.cpp  OpenGLCaches.h  OpenGLCommandContext.cpp  OpenGLCommandContext.h  OpenGLCommon.cpp  OpenGLCommon.h  OpenGLConversions.h  OpenGLDebug.cpp  OpenGLDebug.h  OpenGLDeletionQueue.cpp  OpenGLDeletionQueue.h  OpenGLDescriptor.cpp  OpenGLDescriptor.h  OpenGLDevice.cpp  OpenGLDevice.h  OpenGLPipeline.cpp  OpenGLPipeline.h  OpenGLQuery.cpp  OpenGLQuery.h  OpenGLResources.cpp  OpenGLResources.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLStateCache.cpp  OpenGLStateCache.h  OpenGLSwapChain.cpp  OpenGLSwapChain.h  OpenGLSync.cpp  OpenGLSync.h  OpenGLUpload.cpp  OpenGLUpload.h
RHI_Vulkan/: CMakeLists.txt
RHI_Vulkan/Private/: VulkanCommandBufferPool.cpp  VulkanCommandBufferPool.h  VulkanCommandContext.cpp  VulkanCommandContext.h  VulkanCommon.h  VulkanDescriptorAllocator.cpp  VulkanDescriptorAllocator.h  VulkanDescriptorPool.cpp  VulkanDevice.cpp  VulkanDevice.h  VulkanMemoryAllocator.cpp  VulkanPipeline.cpp  VulkanPipeline.h  VulkanResources.cpp  VulkanResources.h  VulkanSwapChain.cpp  VulkanSwapChain.h  VulkanUpload.cpp  VulkanUpload.h
Render/: CMakeLists.txt
Render/Private/: GPUResourceManager.cpp  GPUUploadService.cpp  PipelineCache.cpp  RenderService.cpp  RenderSubsystem.cpp  RenderSystem.cpp  SwapChainManager.cpp
Render/Shaders/: Decal.hlsl  DefaultLit.hlsl  PBRLit.hlsl
RenderGraph/: CMakeLists.txt  OPTIMIZATION_PLAN.md
RenderGraph/Private/: RenderGraph.cpp  RenderGraphCompiler.cpp  RenderGraphExecutor.cpp  RenderGraphInternal.h
Resource/: CMakeLists.txt
Resource/Private/: DefaultResources.cpp  DependencyGraph.cpp  FileWatcher.cpp  HotReloadManager.cpp  IResource.cpp  ResourceCache.cpp  ResourceManager.cpp  ResourceRegistry.cpp
Runtime/: CMakeLists.txt
Samples/: CMakeLists.txt
Samples/ComputeDemo/: CMakeLists.txt  main.cpp
Samples/Cube3D/: CMakeLists.txt  main.cpp
Samples/InputConfig/: DefaultInput.rvxinput
Samples/ModelViewer/: CMakeLists.txt  main.cpp
Samples/TexturedQuad/: CMakeLists.txt  main.cpp
Samples/Triangle/: CMakeLists.txt  main.cpp
(+853 files in other folders)
